--- a/infrastructure/kube/keep-test/monitoring/prometheus-deployment.yaml
+++ b/infrastructure/kube/keep-test/monitoring/prometheus-deployment.yaml
@@ -46,7 +46,7 @@ spec:
         - name: prometheus-config-volume
           configMap:
             defaultMode: 420
-            name: prometheus-conf
+            name: prometheus
         - name: prometheus-storage-volume
           persistentVolumeClaim:
             claimName: prometheus-pvc
