--- a/test/config_no_contracts.toml
+++ b/test/config_no_contracts.toml
@@ -8,4 +8,4 @@ KeyFile = "/tmp/UTC--2018-03-11T01-37-33.202765887Z--c2a56884538778bacd91aa5bf34
 Port = 27001
 
 [Storage]
-DataDir = "/my/secure/location"
+Dir = "/my/secure/location"
