--- a/test/config_mixed_contracts.toml
+++ b/test/config_mixed_contracts.toml
@@ -8,7 +8,7 @@ KeyFile = "/tmp/UTC--2018-03-11T01-37-33.202765887Z--c2a56884538778bacd91aa5bf34
 Port = 27001
 
 [Storage]
-DataDir = "/my/secure/location"
+Dir = "/my/secure/location"
 
 [developer]
 WalletRegistryAddress = "0x143ba24e66fce8bca22f7d739f9a932c519b1c76"
