Add `pkg/chain/**/gen/_contracts/` to gitignore
The directory contains artifacts used for bindings generation.

This commit also takes a chance to cleanup the wildcards as `**` does
what's needed here. And adds `/` to be specific that it's about a
directory.

--- a/.gitignore
+++ b/.gitignore
@@ -55,7 +55,8 @@ export.json
 typechain/
 
 # Go bindings generator
-pkg/chain/*/*/gen/_address
+pkg/chain/**/gen/_address/
+pkg/chain/**/gen/_contracts/
 
 # Temporary directory
 tmp/
