Update ignores for solidity
The entries are specific for solidity projects, we don't want to be too
generic with those ignores as for e.g. we are going to add `/build/`
directory in the project root for Go but it would be ignored with the
`build/` rule.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-artifacts/
-**/gen/**/build/
 vendor/
 _local/
 ,*
@@ -49,9 +47,11 @@ node_modules/
 # Yarn
 yarn-error.log
 
-# Hardhat
-cache/
-export.json
+# Solidity
+solidity*/**/artifacts/
+solidity*/**/build/
+solidity*/**/cache/
+solidity*/**/export.json
 
 # TypeScript
 typechain/
