--- a/.gitignore
+++ b/.gitignore
@@ -46,10 +46,8 @@ yarn-error.log
 solidity*/**/artifacts/
 solidity*/**/build/
 solidity*/**/cache/
+solidity*/**/typechain/
 solidity*/**/export.json
-
-# TypeScript
-typechain/
 
 # Go bindings generator
 pkg/chain/**/gen/_address/
