Be specfic about `*.abi` files ignore
We want to ignore specific set of `abi` files that are working files
when generating the bindings.

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-*.abi
-
 # Hidden files
 .*
 
@@ -52,6 +50,7 @@ yarn-error.log
 # Go bindings generator
 /pkg/chain/**/gen/_address/
 /pkg/chain/**/gen/_contracts/
+/pkg/chain/**/gen/abi/*.abi
 
 # Temporary directory
 tmp/
