Don't ignore all hidden paths
We want to commit some directories prefixed with `.`, e.g. `.github`,
`.gitmodules`, `.gitignore`. It's easier to list the paths we don't want
to commit.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-# Hidden files
-.*
-
 # MacOS
 *.DS_Store
 
@@ -18,7 +15,7 @@
 # Infrastructure
 /infrastructure/gcp/service-accounts*
 
-# keys
+# Keys
 keystore/
 keep_accounts
 
