Ignore .keep working directory
The path is used by devs as a working directory for the client.

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,9 @@ __pycache__
 /configs/
 !/configs/config.toml.SAMPLE
 
+# Application Working Directory
+.keep/
+
 # Private testnet artifacts
 *-keep-client-deployment-bundle.tar.gz
 
