Update dockerignore file
- Updated `docs*/` to include `docs-v1/` and `docs/`.
- Added `tmp/`, `token-stakedrop/` and `token-tracker/` dirs
- Updated rule for gen go code to ignore all `*.go` files under `gen/`
  dir, except `gen.go` and `cmd.go`

--- a/.dockerignore
+++ b/.dockerignore
@@ -2,9 +2,10 @@
 .*
 
 # Top-level directories unrelated to the build.
-docs/
+docs*/
 infrastructure/
 scripts/
+tmp/
 
 # Top-level files unrealted to the build.
 CODEOWNERS
@@ -19,9 +20,16 @@ Dockerfile
 solidity-v1/
 solidity/
 
+# Token Stakedrop stuff.
+token-stakedrop/
+
+# Token Tracker stuff.
+token-tracker/
+
 # Go stuff.
 **/gen/_contracts
-**/gen/*/**/*.go
+**/gen/**/*.go
+!**/gen/gen.go
 !**/gen/cmd/cmd.go
 
 # Legacy V1 contracts bindings.
