Set default environment for build
The erro was failing wihtout the erorr message and we want to use the
default one.

--- a/pkg/chain/ethereum/common/gen/Makefile
+++ b/pkg/chain/ethereum/common/gen/Makefile
@@ -1,5 +1,5 @@
 ifndef environment
-	$(error environment not defined)
+override environment = development
 endif
 
 root_dir := $(realpath ../../../../..)
