Separate matchin rules for the files
The combined pattern doesn't work.

--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -152,7 +152,9 @@ jobs:
         with:
           name: binaries
           path: |
-            out/bin/*.[tar.gz|md5|sha256]
+            out/bin/*.tar.gz
+            out/bin/*.md5
+            out/bin/*.sha256
 
       - name: Publish Client Binaries
         # if: github.event_name == 'workflow_dispatch'
