--- a/infrastructure/kube/keep-test/keep-client/keep-clients.yaml
+++ b/infrastructure/kube/keep-test/keep-client/keep-clients.yaml
@@ -50,9 +50,12 @@ spec:
         image: gcr.io/keep-test-f3e0/keep-client:latest
         imagePullPolicy: Always
         ports:
-        - containerPort: 3919
-        - containerPort: 9601
-        - containerPort: 9701
+        - name: network
+          containerPort: 3919
+        - name: metrics
+          containerPort: 9601
+        - name: diagnostics
+          containerPort: 9701
         env:
         - name: KEEP_ETHEREUM_PASSWORD
           valueFrom:
@@ -186,15 +189,15 @@ metadata:
 spec:
   type: LoadBalancer
   ports:
-  - port: 3919
-    targetPort: 3919
-    name: network
-  - port: 9601
-    targetPort: 9601
-    name: metrics
-  - port: 9701
-    targetPort: 9701
-    name: diagnostics
+  - name: network
+    port: 3919
+    targetPort: network
+  - name: metrics
+    port: 9601
+    targetPort: metrics
+  - name: diagnostics
+    port: 9701
+    targetPort: diagnostics
   selector:
     app: keep
     type: client
@@ -253,9 +256,12 @@ spec:
         image: gcr.io/keep-test-f3e0/keep-client:latest
         imagePullPolicy: Always
         ports:
-        - containerPort: 3919
-        - containerPort: 9601
-        - containerPort: 9701
+        - name: network
+          containerPort: 3919
+        - name: metrics
+          containerPort: 9601
+        - name: diagnostics
+          containerPort: 9701
         env:
         - name: KEEP_ETHEREUM_PASSWORD
           valueFrom:
@@ -391,15 +397,15 @@ metadata:
 spec:
   type: LoadBalancer
   ports:
-  - port: 3919
-    targetPort: 3919
-    name: network
-  - port: 9601
-    targetPort: 9601
-    name: metrics
-  - port: 9701
-    targetPort: 9701
-    name: diagnostics
+  - name: network
+    port: 3919
+    targetPort: network
+  - name: metrics
+    port: 9601
+    targetPort: metrics
+  - name: diagnostics
+    port: 9701
+    targetPort: diagnostics
   selector:
     app: keep
     type: client
@@ -458,9 +464,12 @@ spec:
         image: gcr.io/keep-test-f3e0/keep-client:latest
         imagePullPolicy: Always
         ports:
-        - containerPort: 3919
-        - containerPort: 9601
-        - containerPort: 9701
+        - name: network
+          containerPort: 3919
+        - name: metrics
+          containerPort: 9601
+        - name: diagnostics
+          containerPort: 9701
         env:
         - name: KEEP_ETHEREUM_PASSWORD
           valueFrom:
@@ -596,15 +605,15 @@ metadata:
 spec:
   type: LoadBalancer
   ports:
-  - port: 3919
-    targetPort: 3919
-    name: network
-  - port: 9601
-    targetPort: 9601
-    name: metrics
-  - port: 9701
-    targetPort: 9701
-    name: diagnostics
+  - name: network
+    port: 3919
+    targetPort: network
+  - name: metrics
+    port: 9601
+    targetPort: metrics
+  - name: diagnostics
+    port: 9701
+    targetPort: diagnostics
   selector:
     app: keep
     type: client
@@ -663,9 +672,12 @@ spec:
         image: gcr.io/keep-test-f3e0/keep-client:latest
         imagePullPolicy: Always
         ports:
-        - containerPort: 3919
-        - containerPort: 9601
-        - containerPort: 9701
+        - name: network
+          containerPort: 3919
+        - name: metrics
+          containerPort: 9601
+        - name: diagnostics
+          containerPort: 9701
         env:
         - name: KEEP_ETHEREUM_PASSWORD
           valueFrom:
@@ -801,15 +813,15 @@ metadata:
 spec:
   type: LoadBalancer
   ports:
-  - port: 3919
-    targetPort: 3919
-    name: network
-  - port: 9601
-    targetPort: 9601
-    name: metrics
-  - port: 9701
-    targetPort: 9701
-    name: diagnostics
+  - name: network
+    port: 3919
+    targetPort: network
+  - name: metrics
+    port: 9601
+    targetPort: metrics
+  - name: diagnostics
+    port: 9701
+    targetPort: diagnostics
   selector:
     app: keep
     type: client
@@ -868,9 +880,12 @@ spec:
         image: gcr.io/keep-test-f3e0/keep-client:latest
         imagePullPolicy: Always
         ports:
-        - containerPort: 3919
-        - containerPort: 9601
-        - containerPort: 9701
+        - name: network
+          containerPort: 3919
+        - name: metrics
+          containerPort: 9601
+        - name: diagnostics
+          containerPort: 9701
         env:
         - name: KEEP_ETHEREUM_PASSWORD
           valueFrom:
@@ -1006,15 +1021,15 @@ metadata:
 spec:
   type: LoadBalancer
   ports:
-  - port: 3919
-    targetPort: 3919
-    name: network
-  - port: 9601
-    targetPort: 9601
-    name: metrics
-  - port: 9701
-    targetPort: 9701
-    name: diagnostics
+  - name: network
+    port: 3919
+    targetPort: network
+  - name: metrics
+    port: 9601
+    targetPort: metrics
+  - name: diagnostics
+    port: 9701
+    targetPort: diagnostics
   selector:
     app: keep
     type: client
