--- a/infrastructure/kube/keep-test/monitoring/prometheus-configmap.yaml
+++ b/infrastructure/kube/keep-test/monitoring/prometheus-configmap.yaml
@@ -33,155 +33,310 @@ data:
           - "alertmanager.monitoring.svc:9093"
 
     scrape_configs:
-      - job_name: 'node-exporter'
-        kubernetes_sd_configs:
-          - role: endpoints
+    - job_name: node-exporter
+      honor_timestamps: true
+      scrape_interval: 5s
+      scrape_timeout: 5s
+      metrics_path: /metrics
+      scheme: http
+      follow_redirects: true
+      enable_http2: true
         relabel_configs:
         - source_labels: [__meta_kubernetes_endpoints_name]
-          regex: 'node-exporter'
+        separator: ;
+        regex: node-exporter
+        replacement: $1
           action: keep
-
-      - job_name: 'kubernetes-apiservers'
         kubernetes_sd_configs:
         - role: endpoints
+        kubeconfig_file: ""
+        follow_redirects: true
+        enable_http2: true
+    - job_name: kubernetes-apiservers
+      honor_timestamps: true
+      scrape_interval: 5s
+      scrape_timeout: 5s
+      metrics_path: /metrics
         scheme: https
-
+      authorization:
+        type: Bearer
+        credentials_file: /var/run/secrets/kubernetes.io/serviceaccount/token
         tls_config:
           ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
-        bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
-
+        insecure_skip_verify: false
+      follow_redirects: true
+      enable_http2: true
         relabel_configs:
         - source_labels: [__meta_kubernetes_namespace, __meta_kubernetes_service_name, __meta_kubernetes_endpoint_port_name]
-          action: keep
+        separator: ;
           regex: default;kubernetes;https
-
-      - job_name: 'kubernetes-nodes'
+        replacement: $1
+        action: keep
+      kubernetes_sd_configs:
+      - role: endpoints
+        kubeconfig_file: ""
+        follow_redirects: true
+        enable_http2: true
+    - job_name: kubernetes-nodes
+      honor_timestamps: true
+      scrape_interval: 5s
+      scrape_timeout: 5s
+      metrics_path: /metrics
         scheme: https
-
+      authorization:
+        type: Bearer
+        credentials_file: /var/run/secrets/kubernetes.io/serviceaccount/token
         tls_config:
           ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
-        bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
-
-        kubernetes_sd_configs:
-        - role: node
+        insecure_skip_verify: false
+      follow_redirects: true
+      enable_http2: true
         relabel_configs:
-        - action: labelmap
+      - separator: ;
           regex: __meta_kubernetes_node_label_(.+)
-        - target_label: __address__
+        replacement: $1
+        action: labelmap
+      - separator: ;
+        regex: (.*)
+        target_label: __address__
           replacement: kubernetes.default.svc:443
+        action: replace
         - source_labels: [__meta_kubernetes_node_name]
+        separator: ;
           regex: (.+)
           target_label: __metrics_path__
           replacement: /api/v1/nodes/${1}/proxy/metrics     
-
-      - job_name: 'kubernetes-pods'
+        action: replace
         kubernetes_sd_configs:
-        - role: pod
+      - role: node
+        kubeconfig_file: ""
+        follow_redirects: true
+        enable_http2: true
+    - job_name: kubernetes-pods
+      honor_timestamps: true
+      scrape_interval: 5s
+      scrape_timeout: 5s
+      metrics_path: /metrics
+      scheme: http
+      follow_redirects: true
+      enable_http2: true
         relabel_configs:
         - source_labels: [__meta_kubernetes_pod_label_app]
+        separator: ;
           regex: (geth|keep|grafana|prometheus)
+        replacement: $1
           action: keep
         - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_path]
-          action: replace
+        separator: ;
+        regex: (.+)
           target_label: __metrics_path__
-          regex: (.+)
-        - action: labelmap
+        replacement: $1
+        action: replace
+      - separator: ;
           regex: __meta_kubernetes_pod_label_(.+)
+        replacement: $1
+        action: labelmap
         - source_labels: [__meta_kubernetes_namespace]
-          action: replace
+        separator: ;
+        regex: (.*)
           target_label: kubernetes_namespace
+        replacement: $1
+        action: replace
         - source_labels: [__meta_kubernetes_pod_name]
-          action: replace
+        separator: ;
+        regex: (.*)
           target_label: kubernetes_pod_name
-
-      - job_name: 'grafana'
+        replacement: $1
+        action: replace
+      - source_labels: [__meta_kubernetes_pod_name]
+        separator: ;
+        regex: (.*)
+        target_label: kubernetes_pod_name_monitoring
+        replacement: ${1}.default.svc.cluster.local:9601
+        action: replace
         kubernetes_sd_configs:
         - role: pod
+        kubeconfig_file: ""
+        follow_redirects: true
+        enable_http2: true
+    - job_name: grafana
+      honor_timestamps: true
+      scrape_interval: 5s
+      scrape_timeout: 5s
+      metrics_path: /metrics
+      scheme: http
+      follow_redirects: true
+      enable_http2: true
         relabel_configs:
         - source_labels: [__meta_kubernetes_pod_label_app]
+        separator: ;
           regex: grafana.*
+        replacement: $1
           action: keep
         - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_path]
-          action: replace
+        separator: ;
+        regex: (.+)
           target_label: __metrics_path__
-          regex: (.+)
-        - action: labelmap
+        replacement: $1
+        action: replace
+      - separator: ;
           regex: __meta_kubernetes_pod_label_(.+)
+        replacement: $1
+        action: labelmap
         - source_labels: [__meta_kubernetes_namespace]
-          action: replace
+        separator: ;
+        regex: (.*)
           target_label: kubernetes_namespace
+        replacement: $1
+        action: replace
         - source_labels: [__meta_kubernetes_pod_name]
-          action: replace
+        separator: ;
+        regex: (.*)
           target_label: kubernetes_pod_name
-
-      - job_name: 'prometheus'
+        replacement: $1
+        action: replace
         kubernetes_sd_configs:
         - role: pod
+        kubeconfig_file: ""
+        follow_redirects: true
+        enable_http2: true
+    - job_name: prometheus
+      honor_timestamps: true
+      scrape_interval: 5s
+      scrape_timeout: 5s
+      metrics_path: /metrics
+      scheme: http
+      follow_redirects: true
+      enable_http2: true
         relabel_configs:
         - source_labels: [__meta_kubernetes_pod_label_app]
+        separator: ;
           regex: prometheus.*
+        replacement: $1
           action: keep
         - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_path]
-          action: replace
+        separator: ;
+        regex: (.+)
           target_label: __metrics_path__
-          regex: (.+)
-        - action: labelmap
+        replacement: $1
+        action: replace
+      - separator: ;
           regex: __meta_kubernetes_pod_label_(.+)
+        replacement: $1
+        action: labelmap
         - source_labels: [__meta_kubernetes_namespace]
-          action: replace
+        separator: ;
+        regex: (.*)
           target_label: kubernetes_namespace
+        replacement: $1
+        action: replace
         - source_labels: [__meta_kubernetes_pod_name]
-          action: replace
+        separator: ;
+        regex: (.*)
           target_label: kubernetes_pod_name
-
-      - job_name: 'kube-state-metrics'
+        replacement: $1
+        action: replace
+      kubernetes_sd_configs:
+      - role: pod
+        kubeconfig_file: ""
+        follow_redirects: true
+        enable_http2: true
+    - job_name: kube-state-metrics
+      honor_timestamps: true
+      scrape_interval: 5s
+      scrape_timeout: 5s
+      metrics_path: /metrics
+      scheme: http
+      follow_redirects: true
+      enable_http2: true
         static_configs:
-          - targets: ['kube-state-metrics.kube-system.svc.cluster.local:8080']
-
-      - job_name: 'kubernetes-cadvisor'
+      - targets:
+        - kube-state-metrics.kube-system.svc.cluster.local:8080
+    - job_name: kubernetes-cadvisor
+      honor_timestamps: true
+      scrape_interval: 5s
+      scrape_timeout: 5s
+      metrics_path: /metrics
         scheme: https
-
+      authorization:
+        type: Bearer
+        credentials_file: /var/run/secrets/kubernetes.io/serviceaccount/token
         tls_config:
           ca_file: /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
-        bearer_token_file: /var/run/secrets/kubernetes.io/serviceaccount/token
-
-        kubernetes_sd_configs:
-        - role: node
+        insecure_skip_verify: false
+      follow_redirects: true
+      enable_http2: true
         relabel_configs:
-        - action: labelmap
+      - separator: ;
           regex: __meta_kubernetes_node_label_(.+)
-        - target_label: __address__
+        replacement: $1
+        action: labelmap
+      - separator: ;
+        regex: (.*)
+        target_label: __address__
           replacement: kubernetes.default.svc:443
+        action: replace
         - source_labels: [__meta_kubernetes_node_name]
+        separator: ;
           regex: (.+)
           target_label: __metrics_path__
           replacement: /api/v1/nodes/${1}/proxy/metrics/cadvisor
-
-      - job_name: 'kubernetes-service-endpoints'
+        action: replace
         kubernetes_sd_configs:
-        - role: endpoints
+      - role: node
+        kubeconfig_file: ""
+        follow_redirects: true
+        enable_http2: true
+    - job_name: kubernetes-service-endpoints
+      honor_timestamps: true
+      scrape_interval: 5s
+      scrape_timeout: 5s
+      metrics_path: /metrics
+      scheme: http
+      follow_redirects: true
+      enable_http2: true
         relabel_configs:
         - source_labels: [__meta_kubernetes_service_annotation_prometheus_io_scrape]
+        separator: ;
+        regex: "true"
+        replacement: $1
           action: keep
-          regex: true
         - source_labels: [__meta_kubernetes_service_annotation_prometheus_io_scheme]
-          action: replace
+        separator: ;
+        regex: (https?)
           target_label: __scheme__
-          regex: (https?)
+        replacement: $1
+        action: replace
         - source_labels: [__meta_kubernetes_service_annotation_prometheus_io_path]
-          action: replace
+        separator: ;
+        regex: (.+)
           target_label: __metrics_path__
-          regex: (.+)
+        replacement: $1
+        action: replace
         - source_labels: [__address__, __meta_kubernetes_service_annotation_prometheus_io_port]
-          action: replace
-          target_label: __address__
+        separator: ;
           regex: ([^:]+)(?::\d+)?;(\d+)
+        target_label: __address__
           replacement: $1:$2
-        - action: labelmap
+        action: replace
+      - separator: ;
           regex: __meta_kubernetes_service_label_(.+)
+        replacement: $1
+        action: labelmap
         - source_labels: [__meta_kubernetes_namespace]
-          action: replace
+        separator: ;
+        regex: (.*)
           target_label: kubernetes_namespace
+        replacement: $1
+        action: replace
         - source_labels: [__meta_kubernetes_service_name]
-          action: replace
+        separator: ;
+        regex: (.*)
           target_label: kubernetes_name
+        replacement: $1
+        action: replace
+      kubernetes_sd_configs:
+      - role: endpoints
+        kubeconfig_file: ""
+        follow_redirects: true
+        enable_http2: true
